# qtdptools

./: compile.py  setup.cfg
qtdptools/: __init__.py  application.py  dialog.py  messagebox.py  show_utils.py  thread.py  timer.py  utils.py  window.py
qtdptools/examples/: thread_nonstopdo.py  thread_singledo.py
qtdptools/widget/: Email.py  EmailReport.py  __init__.py
qtdptools/widgets/: Email.py  EmailServer.py  SecretEmail.py  __init__.py
