[metadata]
name = qtdptools
version = 1.0b2
license = MIT License
author = Xingyu Bao
author_email = baoxingyubob@outlook.com
description = 
    Auxiliary tools for python qt programming
url = https://github.com/bobdadada/qtdptools

[options]
zip_safe = False
packages = find:
install_requires =
    qtpy
